[tool.poetry]
name = "test_async"
version = "0.1.0"
description = ""
authors = ["Alex <ivanovivan159753@yandex.ru>"]

[tool.poetry.dependencies]
python = ">=3.11"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
pylint = "^2.15.7"
mypy = "^0.991"
black = "^22.10.0"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
